--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,8 +30,9 @@
         
         <div style="text-align: center; margin-top: 20px;">
             <h3>Video en vivo desde cámara</h3>
-            <img src="http://localhost:8000/video_feed" style="max-width: 90%; border: 2px solid #333;" />
+            <img id="camFeed" style="max-width: 90%; border: 2px solid #333;" />
         </div>
+
 
 
         <div id="errorMsg" style="color: red; font-weight: bold;"></div>
