--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,12 +28,8 @@
             </div>
         </div>
         
-        <div style="text-align: center; margin-top: 20px;">
-            <h3>Video en vivo desde cámara</h3>
-            <img id="camFeed" style="max-width: 90%; border: 2px solid #333;" />
-        </div>
-
-
+        <h3>Video en vivo desde cámara</h3>
+        <video id="camFeed" autoplay playsinline style="max-width: 90%; border: 2px solid #333;"></video>
 
         <div id="errorMsg" style="color: red; font-weight: bold;"></div>
 
