--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,11 @@
 
         <div id="errorMsg" style="color: red; font-weight: bold;"></div>
 
+        <div style="margin: 1em 0; text-align: center;">
+            <button onclick="usarCamara('user')">Cámara Frontal</button>
+            <button onclick="usarCamara('environment')">Cámara Trasera</button>
+        </div>
+
         <script src="/js/script.js"></script>
     </body>
 </html>
